# onboard-grant-aggragator

./: Cargo.toml  Dockerfile  README.md  response.json
.github/workflows/: docker-publish.yml  rust-check.yml
src/: lib.rs  main.rs
