[package]
name = "OnboardGrant"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.4"
git-download = "0.1.1"
log = "0.4.22"
prometheus_exporter = { git = "https://github.com/barrelmaker97/prometheus_exporter.git"}
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
tokio = {version = "1.39.1", features = ["full"]}
